--- a/public/style.css
+++ b/public/style.css
@@ -49,7 +49,7 @@ h1 {
   padding: 8px 15px;
 }
 
-.main-link:hover {
+.main-link:hover , .main-link.active {
   color: cyan;
   border: 2px solid cyan;
 
@@ -127,3 +127,5 @@ footer {
   text-align: center;
   font-size: 20px;
 }
+
+
